# riz

./: pyproject.toml  riz.py
riz/: __main__.py  boolean.py  check.py  eval.py  integer.py  lex.py  parse.py  ratio.py  rational.py  repl.py  result.py  runtime.py  unit.py
