[project]
name = "riz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
riz = "riz.repl:repl"

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""  # package lives at ./riz, not ./src/riz

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
python_files = ["*.py"]
